fix: Remove all string truncation and implement pagination
This commit removes all string truncation logic from the USSD menus and implements pagination for long lists of items.

The following changes were made:
- Removed all truncation logic from `UssdMenuService` and `UssdResponseBuilder`.
- Implemented pagination for the camp selection menu.
- Fixed an issue where the price was not being appended to the location name because of a premature check for available space.